# Final_Project

./: .gitignore  ALL_MODES_TEST_SUMMARY.md  CLAUDE.md  DR_CONSTRAINT_FIX_REPORT.md  EXIT_ANGLE_10_DEGREES.md  FILE_ORGANIZATION_COMPLETE.md  FINAL_FIX_SUMMARY.md  FINAL_SUMMARY_2026-04-07.md  FINAL_TEST_CONFIRMATION.md  FIX_REPORT.md  GIT_PUSH_SUCCESS.md  GIT_PUSH_TROUBLESHOOTING.md  GIT_STATUS_REPORT.md  GIT_VERSION_HISTORY.md  IMPLEMENTATION_VS_MANUSCRIPT_ANALYSIS.md  LARGE_ANGLE_TURN_FIX_README.md  MODE_DATA_COLLECTION_ANALYSIS.md  P03_STL_MPC_INTEGRATION_COMPLETE.md  P04_DR_CONSTRAINTS_VERIFIED.md  PAPER_ANALYSIS_SUMMARY.md  PERFORMANCE_METRICS_ANALYSIS.md  PHASE3_CURRENT_STATUS.md  PHASE3_TF_FIX_VERIFICATION.md  PHASE5_COMPILATION_SUMMARY.md  PHASE5_E2E_TEST_REPORT.md  PHASE5_NODE_STARTUP_CONFIRMATION.md  PHASE5_TERMINAL_SET_IMPLEMENTATION.md  PROGRESS_2026-04-07.md  PROJECT_ROADMAP.md  PROJECT_STATUS.md  QUICK_START.md  RANDOM_OBSTACLES_IMPLEMENTATION.md  README.md  ROTATION_DIRECTION_LOCK_FIX_REPORT.md  ROTATION_LOCK_IMPLEMENTATION_SUMMARY.md  RVIZ_DISPLAY_ISSUE_AND_SOLUTION.md  SAFETY_RADIUS_INCREASE.md  SESSION_SUMMARY_2026-04-09.md  SMART_TURNING_FIX.md  STL_FIX_AND_TEST_REPORT.md  (+33 more)
src/STL_ros/: CMakeLists.txt  FINAL_INTEGRATION_REPORT.md  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LAUNCH_GUIDE.md  LAUNCH_READY.md  QUICK_START.md  README.md  TESTING_AND_FIXES.md  TESTING_COMPLETED.md  TEST_COMPLETE.md  package.xml  setup.py
src/STL_ros/cfg/: STLMonitorParams.cfg
src/STL_ros/include/STL_ros/: BeliefSpaceEvaluator.h  RobustnessBudget.h  STLFormula.h  STLMonitor.h  STLROSInterface.h  SmoothRobustness.h
src/STL_ros/launch/: minimal_safe_regret_mpc.launch  safe_regret_mpc.launch  stl_monitor.launch  test_stl_monitor.launch  tube_mpc_with_stl.launch
src/STL_ros/msg/: STLBudget.msg  STLFormula.msg  STLRobustness.msg
src/STL_ros/params/: formulas.yaml  stl_params.yaml
src/STL_ros/scripts/: OFFLINE_TEST_RESULTS.md  check_launch_prerequisites.sh  comprehensive_test.sh  final_validation.sh  launch_safe_regret_mpc.sh  quick_start.sh  quick_test.sh  standalone_test.sh  stl_monitor.py  stl_visualizer.py  test_integration.py  test_launch.sh  test_stl_package.sh  test_stl_ros.py
src/STL_ros/src/: BeliefSpaceEvaluator.cpp  RobustnessBudget.cpp  STLFormula.cpp  STLMonitor.cpp  STLROSInterface.cpp  SmoothRobustness.cpp  stl_monitor_node.cpp
src/dr_tightening/: CMakeLists.txt  README.md  TEST_REPORT.md  package.xml
src/dr_tightening/include/dr_tightening/: AmbiguityCalibrator.hpp  ResidualCollector.hpp  SafetyLinearization.hpp  TerminalSetCalculator.hpp  TighteningComputer.hpp  dr_tightening_node.hpp
src/dr_tightening/launch/: dr_tightening.launch  dr_tube_mpc_integrated.launch  terminal_set_computation.launch  test_dr_formulas.launch  test_terminal_set.launch
src/dr_tightening/params/: dr_tightening_params.yaml
src/dr_tightening/rviz/: terminal_set.rviz
src/dr_tightening/src/: AmbiguityCalibrator.cpp  ResidualCollector.cpp  SafetyLinearization.cpp  TerminalSetCalculator.cpp  TighteningComputer.cpp  dr_tightening_node.cpp  dr_tightening_node_main.cpp
src/dr_tightening/test/: test_comprehensive.cpp  test_dimension_mismatch.cpp  test_dr_formulas.cpp  test_stress.cpp
src/safe_regret/: BELIEF_OPTIMIZER_REPORT.md  CMakeLists.txt  OMPL_INTEGRATION_STATUS.md  OMPL_REFERENCE_INTEGRATION.md  PHASE4_ACTIVE_INFORMATION_COMPLETE.md  PHASE4_COMPLETE_SUMMARY.md  package.xml
src/safe_regret/include/safe_regret/: ActiveInformation.hpp  BeliefSpaceOptimizer.hpp  OMPLPathPlanner.hpp  ReferencePlanner.hpp  RegretAnalyzer.hpp  RegretMetrics.hpp  SafeRegretNode.hpp  TopologicalAbstraction.hpp
src/safe_regret/launch/: safe_regret_integrated.launch  safe_regret_planner.launch  safe_regret_simplified.launch  test_integration.launch
src/safe_regret/params/: safe_regret_params.yaml
src/safe_regret/src/: ActiveInformation.cpp  BeliefSpaceOptimizer.cpp  OMPLPathPlanner.cpp  OMPLPathPlannerFallback.cpp  ReferencePlanner.cpp  RegretAnalyzer.cpp  RegretMetrics.cpp  SafeRegretNode.cpp  TopologicalAbstraction.cpp  safe_regret_node_main.cpp
src/safe_regret/test/: test_active_information.cpp  test_belief_optimizer.cpp  test_ompl_integration.cpp  test_ompl_planner.cpp  test_regret_core.cpp  test_topological_abstraction.cpp
src/safe_regret_mpc/: CMakeLists.txt  TUNING_SUMMARY.md  package.xml
src/safe_regret_mpc/docs/: SAFE_REGRET_MPC_TUNING.md
src/safe_regret_mpc/include/safe_regret_mpc/: DRConstraintIntegrator.hpp  MetricsCollector.hpp  PerformanceMonitor.hpp  RegretTracker.hpp  SafeRegretMPC.hpp  (+3 more)
src/safe_regret_mpc/launch/: safe_regret_mpc.launch  safe_regret_mpc_test.launch  test_full_integration.launch  test_safe_regret_mpc.launch
src/safe_regret_mpc/msg/: DRMargins.msg  STLRobustness.msg  SafeRegretMetrics.msg  SafeRegretState.msg  TerminalSet.msg
src/safe_regret_mpc/params/: safe_regret_mpc_params (copy).yaml  safe_regret_mpc_params.yaml  safe_regret_mpc_params.yaml.backup_20260401_091218  safe_regret_mpc_params.yaml.backup_before_constraint_fix  safe_regret_mpc_params_fast.yaml  safe_regret_mpc_params_smooth.yaml
src/safe_regret_mpc/rviz/: safe_regret_mpc.rviz
src/safe_regret_mpc/scripts/: auto_nav_goal.py  highlight_obstacles.py  random_obstacles.py  respawn_obstacles.py  show_obstacles_in_gazebo.py  switch_safe_regret_params.sh
src/safe_regret_mpc/src/: DRConstraintIntegrator.cpp  MetricsCollector.cpp  PerformanceMonitor.cpp  RegretTracker.cpp  STLConstraintIntegrator.cpp  SafeRegretMPC.cpp  SafeRegretMPCSolver.cpp  TerminalSetIntegrator.cpp  safe_regret_mpc_node.cpp
src/safe_regret_mpc/srv/: GetSystemStatus.srv  ResetRegretTracker.srv  SetSTLSpecification.srv
src/tube_mpc_ros/mpc_ros/: AUTO_NAV_GOAL_README.md  CMakeLists.txt  CMakeLists.txt.update  METRICS_INTEGRATION_GUIDE.md  mpc_plugin.xml  package.xml
src/tube_mpc_ros/stl_monitor/: BUG_FIX_REPORT.md  CMakeLists.txt  PHASE2_COMPLETION_REPORT.md  TESTING_SUMMARY.md  package.xml
test/benchmark/tube_mpc_benchmark/: BENCHMARK_SOLUTION.md  CMakeLists.txt  README.md  package.xml
(+3381 files in other folders)
