<?xml version="1.0"?>
<package format="2">
  <name>stl_ros</name>
  <version>1.0.0</version>
  <description>
    STL (Signal Temporal Logic) monitoring and evaluation package for Safe-Regret MPC.
    Provides belief-space robustness computation, smooth surrogates, and budget management.
  </description>

  <maintainer email="dixon@example.com">Dixon</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS dependencies -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <!-- MPC integration (optional - for future integration) -->
  <!-- <depend>tube_mpc_ros</depend> -->

  <!-- Build dependencies -->
  <build_depend>dynamic_reconfigure</build_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
