<?xml version="1.0"?>
<package format="2">
  <name>safe_regret</name>
  <version>1.0.0</version>
  <description>Safe-Regret MPC - Reference Planner and Regret Analysis (Phase 4)</description>

  <maintainer email="dixon@example.com">Dixon</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <test_depend>rostest</test_depend>

  <export>
    <safe_regret plugin="${prefix}/params/safe_regret_params.yaml"/>
  </export>
</package>
