<?xml version="1.0"?>
<package format="2">
  <name>safe_regret_mpc</name>
  <version>1.0.0</version>
  <description>
    Unified Safe-Regret MPC system integrating STL monitoring,
    distributionally robust constraints, and tube MPC with
    terminal sets for temporal-logic tasks under uncertainty.
  </description>

  <maintainer email="dixon@example.com">Dixon</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <!-- MPC dependencies -->
  <depend>cppad</depend>
  <depend>ipopt</depend>

  <!-- Project dependencies -->
  <depend>tube_mpc_ros</depend>
  <depend>stl_monitor</depend>
  <depend>dr_tightening</depend>
  <depend>safe_regret</depend>

  <!-- ROS plugins -->
  <build_depend>pluginlib</build_depend>
  <exec_depend>pluginlib</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
