<?xml version="1.0"?>
<package format="2">
  <name>stl_monitor</name>
  <version>1.0.0</version>
  <description>STL Monitor - Signal Temporal Logic evaluation and monitoring for Safe-Regret MPC</description>

  <maintainer email="dixon@todo.todo">Dixon</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>Eigen3</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
